added meta tags and meta tags service, fixed issues with  XMLHttpRequest is not defined and Flex LayoutModule for Universal

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <meta name="application-name", content="">
+  <meta name="node-version", content="">
+  <meta name="angular-version", content="">
+  <meta name="ngrx-store-version", content="">
+  <meta name="ngrx-effects-version", content="">
+
 </head>
 <body>
   <app-root></app-root>
