changed styles for update

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="ngrx-effects-version", content="">
 
 </head>
-<body>
+<body class="background-color-grey">
   <app-root></app-root>
 </body>
 </html>
